Fix button outline on firefox

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -29,7 +29,8 @@ body {
 .btn:active.focus,
 .btn:active:focus,
 .btn:focus {
-  outline: 5px auto #4e2242;
+  outline: none !important;
+  border: 1px solid #4e2242;
 }
 .error {
   margin-top: 50px;
